[package]
name = "typed-codec"
version = "0.1.0"
authors = ["tmtmtoo <tmtmt2209@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
base64 = "0.13.0"
des = "0.7.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
